--- a/SmsForward/app/src/main/res/layout/activity_main.xml
+++ b/SmsForward/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,21 @@
             android:orientation="vertical" >
 
             <EditText
-                android:id="@+id/forwardingNumber"
+                android:id="@+id/apiKey"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Number"
-                android:imeActionId="@+id/setNumber"
-                android:imeActionLabel="set number"
-                android:imeOptions="actionUnspecified"
+                android:hint="Telegram API key"
                 android:maxLines="1"
                 android:singleLine="true" />
-                        
+
+            <EditText
+                android:id="@+id/userId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Telegram UserID"
+                android:maxLines="1"
+                android:singleLine="true" />
+
             <Button
                 android:id="@+id/setNumber"
                 android:layout_width="wrap_content"
@@ -32,7 +37,18 @@
                 android:paddingRight="32dp"
                 android:text="Set" 
                 android:onClick="setNumber"/>
-	            
+
+            <Button
+                android:id="@+id/sendTest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="16dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:text="Send Test"
+                android:onClick="sendTest"/>
+
             </LinearLayout>
     </ScrollView>
 </merge>
